# lakehouse-appkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  app.py  app_simple.py  client.py  databricks.yml  demo.py  deploy.sh  deploy_assistant.sh  deployment_config.py  install.sh  pyproject.toml  requirements.txt  run_demo_workflow.py  run_tests.sh  setup.cfg
config/: .env.example  .env.prod.example  .env.test.example  README.md  README_QUICK.md
examples/: README.md  sql_and_dashboards_example.py  unity_catalog_app.py  unity_catalog_rest_api_example.py
examples/workflows/: data_quality_workflow.yaml  risk_override_workflow.yaml  simple_etl.yaml  test_demo.yaml
lakehouse_appkit/: __init__.py  config.py  dependencies.py  resilience.py  resilience_config.py
lakehouse_appkit/adapters/: __init__.py  databricks.py
lakehouse_appkit/auth/: __init__.py  oauth_client.py  routes.py  service_principals.py
lakehouse_appkit/cli/: main.py
lakehouse_appkit/cli/commands/: __init__.py  add.py  ai.py  ai_providers_cmd.py  connections.py  create.py  delta.py  deploy.py  deployment.py  functions_cmd.py  genie.py  init.py  jobs.py  mlflow_cmd.py  model_serving.py  notebooks.py  oauth_sp.py  run.py  secrets.py  uc.py  vector_search.py  workflow.py
lakehouse_appkit/connections/: __init__.py  rest_client.py
lakehouse_appkit/dashboards/: __init__.py  rest_client.py  routes.py
lakehouse_appkit/delta/: __init__.py  rest_client.py
lakehouse_appkit/deployment/: __init__.py  packager.py  rest_client.py
lakehouse_appkit/functions/: __init__.py  rest_client.py
lakehouse_appkit/genie/: __init__.py  rest_client.py
lakehouse_appkit/jobs/: __init__.py  rest_client.py  routes.py
lakehouse_appkit/mlflow/: __init__.py  rest_client.py
lakehouse_appkit/model_serving/: __init__.py  rest_client.py  routes.py
lakehouse_appkit/notebooks/: __init__.py  rest_client.py
lakehouse_appkit/oauth/: rest_client.py
lakehouse_appkit/sdk/: __init__.py  ai_providers.py  ai_scaffold.py  auth.py  base.py  exceptions.py  models.py  query.py  utils.py
lakehouse_appkit/secrets/: __init__.py  rest_client.py  routes.py
lakehouse_appkit/sql/: __init__.py  rest_client.py
lakehouse_appkit/templates/: __init__.py  base.html  dashboard.html  unity_catalog.html
lakehouse_appkit/templates/static/: app.js  style.css
lakehouse_appkit/unity_catalog/: __init__.py  rest_client.py  routes.py
lakehouse_appkit/vector_search/: __init__.py  rest_client.py  routes.py
lakehouse_appkit/workflows/: __init__.py  routes.py
tests/: __init__.py  conftest.py  test_adapter_regression.py  test_adapters.py  test_ai_scaffolding.py  test_auth.py  test_cli.py  test_config.py  test_dashboard_routes.py  test_dashboards_api.py  test_delta_api.py  test_dependencies.py  test_deployment_api.py  test_endpoints.sh  test_integration.py  test_jobs_api.py  test_model_serving_api.py  test_notebooks_api.py  test_oauth_api.py  test_output.txt  test_output_fixed.txt  test_phase5_api.py  test_query_builder.py  test_sdk.py  test_secrets.py  test_secrets_api.py  test_sql_api.py  test_unity_catalog.py  test_vector_search_api.py  test_vector_search_routes.py  test_workflow.py  validate_workflow.py
